# clawctl

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
clawctl/: __init__.py  cli.py  db.py
dashboard/: index.html  server.py
docs/plans/: 2026-02-11-dashboard-agent-visibility-design.md  2026-02-11-dashboard-agent-visibility-impl.md
tests/: conftest.py  test_cli.py  test_db.py  test_server.py
