[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clawctl"
version = "0.3.1"
description = "Coordination layer for OpenClaw agent fleets"
readme = "README.md"
license = "MIT"
authors = [{name = "Larry Ludlow"}]
requires-python = ">=3.9"
dependencies = ["click", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
clawctl = "clawctl.cli:cli"

[tool.setuptools.packages.find]
include = ["clawctl*", "dashboard*"]

[project.urls]
Homepage = "https://github.com/lludlow/clawctl"
Repository = "https://github.com/lludlow/clawctl"
Issues = "https://github.com/lludlow/clawctl/issues"

[tool.setuptools.package-data]
clawctl = ["schema.sql"]
dashboard = ["index.html"]

[tool.ruff]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
